tests/rascal/negative/type_errors/L1/16_expression_ES10_D4_25.ob
MODULE Test16;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (((- (1223 DIV 2)) DIV ((0 - 2) + (1 MOD 0))) MOD (((200 MOD 2) + (1 DIV 1223)) + (- (- z))));
               y := (- (- ((+ 1) + (200 + 0))));
               x := ((((1 - 1223) * (1 - 0)) * ((1 + 1) DIV (y * 1))) * (((1 * 1) - (z DIV 2)) - ((1223 * 0) + (1 MOD y))));
               p := ((((1 * z) MOD (0 * 2)) DIV (+ (x * 200))) <= (((1 - x) - (y + x)) DIV ((x MOD z) * (- 2))));
               q := (((+ (- x)) - ((2 DIV 1223) DIV (0 MOD 1223))) < ((- (- 2)) - ((0 DIV y) DIV (200 - y))));
  (* error *)  x := ((((p DIV 0) + (0 DIV 1)) - ((200 MOD 200) + (200 + x))) - (((2 - y) * (x DIV 0)) DIV (- (x - y))));
               z := ((((1 + 0) + (1 - 2)) + (- (y + 1))) - (((1223 * 2) DIV (- 2)) + (+ (- z))));
               y := (- (((1 - z) - (200 * 1)) DIV (- (x MOD 0))));
               x := ((((2 - 0) + (- y)) + (- (200 - 2))) + (+ ((1 * 1223) + (z - x))));
               y := ((+ ((- 0) DIV (y DIV 2))) - (+ ((y DIV 1223) * (x - y))))
END Test16.